--- a/likelion_kgu/likelion/templates/likelion/main.html
+++ b/likelion_kgu/likelion/templates/likelion/main.html
@@ -1,12 +1,12 @@
 {% extends 'likelion/layout.html' %}
-
+{% load staticfiles %}
 {% block content %}
   <!-- Header -->
   <header class="masthead">
-    <div class="container">
+    <div class="container pt-5">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
+        <div class="intro-lead-in">LIKELION at KGU</div>
+        <div class="intro-heading text-uppercase">LIKELION</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
       </div>
     </div>
