--- a/likelion_kgu/likelion/templates/likelion/layout.html
+++ b/likelion_kgu/likelion/templates/likelion/layout.html
@@ -11,6 +11,7 @@
 
   <title>LIKELION - KGU</title>
   <link rel="shortcut icon" href="{% static 'likelion/img/logo.ico' %}">
+  
   <!-- Bootstrap core CSS -->
   <link href="{% static 'likelion/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
@@ -39,19 +40,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services </a>
+            <a class="nav-link js-scroll-trigger" href="#services">Introduce </a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Team </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact </a>
+            <a class="nav-link js-scroll-trigger" href="#about">Album </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">board </a>
           </li>
         </ul>
       </div>
