--- a/likelion_kgu/likelion/templates/likelion/layout.html
+++ b/likelion_kgu/likelion/templates/likelion/layout.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">LIKELION-KGU</a>
+      <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">LIKELION-KGU</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -52,7 +52,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">Album </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">board </a>
+            <a class="nav-link js-scroll-trigger" href="{% url 'board' %}">board </a>
           </li>
         </ul>
       </div>
@@ -74,7 +74,22 @@
 
   <!-- Custom scripts for this template -->
   <script src="{% static 'likelion/js/agency.min.js' %}"></script>
-
+    
+  <!-- navbar -->
+  <script>
+    // Collapse Navbar
+    var navbarCollapse = function() {
+        if ($("#mainNav").offset().top > 100) {
+        $("#mainNav").addClass("navbar-shrink");
+        } else {
+        $("#mainNav").removeClass("navbar-shrink");
+        }
+    };
+    // Collapse now if page is not at top
+    navbarCollapse();
+    // Collapse the navbar when page is scrolled
+    $(window).scroll(navbarCollapse);
+  </script>
 </body>
 
 </html>
